--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,19 @@
 .DS_Store
 .idea
-*/__pycache__
-*/best_model/
+**/__pycache__
+**/best_model/
+**/data
+**/raw_data
 */target_best_model
 */disease_best_model
 */outputs/
-*/cache/
-*/cache_dir/
-*/runs/
+**/cache/
+**/cache_dir/
+**/outputs
+**/runs/
+**/results
+**/wandb
+*.pt
 *.pkl
 *.h5
 *.xlsx
@@ -22,6 +28,7 @@
 *.p
 *.7z
 *.zip
+*.gz
 */__MACOSX
 !/README.md
 /pharm_ai/clinical_outcome_summarizer/
@@ -98,3 +105,5 @@ pharm_ai/matching/
 /pharm_ai/haystack_test/
 /pharm_ai/zyl_utils/
 /layoutlmft/
+docs/
+**/.ipynb_checkpoints
